--- a/SpySeal/SpySeal.html
+++ b/SpySeal/SpySeal.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Spy Seal</title>
 </head>
 
@@ -10,9 +11,27 @@
 <h2>Spy Seal</h2>
 <img src="SpySeal.jpg"> <br>
 Creator: Rich Tomasso<br>
-Series: one-shot Graphic Novel<br>
 Publisher: 2017 Image Comics <br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="SpySeal.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpySeal1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpySeal2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpySeal3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpySeal4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SpySeal5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Spy Seal cartoonist Rich Tommaso made headlines after lamenting low orders for his vibrant new book. It’s a shame as the cartoonist is clearly talented and funnelling a cool aesthetic—the clean, ‘60s Franco-Belgian all-ages fun of Tintin—in his marine mammal mystery. It marks the third visual pivot from Tommaso at publisher Image, first with the pot-boiler noir Dark Corridor and then the watercolor ‘80s horror of She Wolf. As with those previous entries, Tommaso embraces every aspect of his adopted aesthetic. 
 </p><p>
 The benign, simple font, an adherence to color fills instead of gradients, and an overall devotion to clarity make Spy Seal look more like a relic that exists inside of Wes Anderson’s head instead of a comic from a mainstream publisher. Fortunately, it is, and it is damn delectable. Buying this series is cultivating a marketplace willing to breach house styles and stretch the color palette range a few shades beyond the customary, and allowing yourself to be surprised by artistic legacies that shouldn’t belong solely in history books.
