--- a/index.html
+++ b/index.html
@@ -16933,6 +16933,13 @@
 </tr>
 
 <tr>
+<td>Crystal Publications</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="CrystalPublications/CrystalPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crystar</td>
 <td>1983</td>
 <td>Marvel</td>
@@ -18856,6 +18863,13 @@
 <td>1993</td>
 <td>Blue Comet</td>
 <td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Death's Head</td>
+<td>1987</td>
+<td>Crystal</td>
+<td><a href="CrystalPublications/CrystalPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21390,6 +21404,13 @@
 <td>1941</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eagle</td>
+<td>1986</td>
+<td>Crystal</td>
+<td><a href="CrystalPublications/CrystalPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51628,6 +51649,13 @@
 </tr>
 
 <tr>
+<td>Skrog Special</td>
+<td>1987</td>
+<td>Crystal</td>
+<td><a href="CrystalPublications/CrystalPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skrull Kill Krew</td>
 <td>1995</td>
 <td>Marvel</td>
@@ -54993,6 +55021,13 @@
 <td>1985</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales Of The Beanworld</a>
+<td>1985</td>
+<td>Beanworld Press</td>
+<td><a href="Beanworld/Beanworld.html">Details</a></td>
 </tr>
 
 <tr>
