--- a/EternityComics/EternityComics.html
+++ b/EternityComics/EternityComics.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="EternityComics1.jpg">
+<img src="EternityComics.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -31,33 +31,98 @@ Malibu stopped using the Eternity imprint before Marvel acquired Malibu, when Et
 </p><p>
 Titles
 </p><p>
-<li>Apache Dick (1990)
-<li>Borderguard (1987)
-<li>Cat Claw (1990)
-<li>Captain Harlock (1989)
-<li>Cosmic Heroes (1988)
-<li>Dark Wolf (1988)
-<li>Dinosaurs For Hire (1988)
-<li>Earthlore (1986)
-<li>Evil Ernie (1991)
-<li>Ex-Mutants (1987)
-<li>Fright (1988)
-<li>Futurians (1987)
-<li>Gonad the Barbarian (1986)
-<li>Gundam 0083
-<li>I Love Lucy
-<li>Invisoworld
-<li>The Jackaroo (1990)
-<li>Lensman (1990)
-<li>Metal Bikini
-<li>The Mighty Mites (1986)
+<li><a href="EternityComics1.jpg">Apache Dick</a> (1990)
+<li><a href="EternityComics2.jpg">Argonauts</a> (1988)
+<li><a href="EternityComics3.jpg">Battle Armor</a> (1988)
+<li><a href="EternityComics4.jpg">Battle To The Death</a> (1987)
+<li><a href="EternityComics5.jpg">Beach Party</a> (1989)
+<li><a href="EternityComics6.jpg">Big Prize</a> (1988)
+<li><a href="EternityComics7.jpg">Blade Of Shuriken</a> (1988)
+<li><a href="EternityComics8.jpg">Blood Feast</a> (1991)
+<li><a href="EternityComics9.jpg">Blood Junkies On Captiol Hill</a> (1991)
+<li><a href="EternityComics10.jpg">Blood Wing</a> (1988)
+<li><a href="EternityComics11.jpg">Blood Brothers</a> (1988)
+<li><a href="EternityComics11a.jpg">Borderguard (1987)
+<li><a href="EternityComics12.jpg">Broid</a> (1990)
+<li><a href="EternityComics13.jpg">Bronx</a> (1991)
+<li><a href="EternityComics14.jpg">Captain Harlock</a> (1989)
+<li><a href="EternityComics15.jpg">Captain Harlock Christmas Special</a> (1991)
+<li><a href="EternityComics16.jpg">Captain Harlock: Deathshadow Rising</a> (1991)
+<li><a href="EternityComics17.jpg">Captain Harlock: Fall Of The Empire</a> (1989)
+<li><a href="EternityComics18.jpg">Captain Harlock: The Machine People</a> (1993)
+<li><a href="EternityComics63.jpg">Carnage</a> (1987)
+<li><a href="EternityComics19.jpg">Case Of Blind Fear</a> (1989)
+<li><a href="EternityComics20.jpg">Cat Claw</a> (1990)
+<li><a href="EternityComics21.jpg">Cat Tales 3-D</a> (1989)
+<li><a href="EternityComics22.jpg">Charlie Chan</a> (1989)
+<li><a href="EternityComics22a.jpg">Classic Girls</a> (1990)
+<li><a href="EternityComics23.jpg">Cosmic Heroes</a> (1988)
+<li><a href="EternityComics24.jpg">Crime Classics</a> (1988)
+<li><a href="EternityComics25.jpg">Dan Turner, Hollywood Detective: Ace In The Hole</a> (1991)
+<li><a href="EternityComics26.jpg">Dan Turner, Hollywood Detective: Homicide Hunch</a> (1991)
+<li><a href="EternityComics27.jpg">Dan Turner, Hollywood Detective: The Dark Star Of Death</a> (1991)
+<li><a href="EternityComics28.jpg">Dan Turner, Hollywood Detective: The Star Chamber</a> (1991)
+<li><a href="EternityComics29.jpg">Dark Wolf</a> (1988)
+<li><a href="EternityComics64.jpg">Death Hunt</a> (1992)
+<li><a href="EternityComics30.jpg">Demonic Toys</a> (1992)
+<li><a href="EternityComics31.jpg">Dinosaurs For Hire</a> (1988)
+<li><a href="EternityComics32.jpg">Doctor Gorpon</a> (1991)
+<li><a href="EternityComics33.jpg">Dollman</a> (1991)
+<li><a href="EternityComics34.jpg">Dracula</a> (1989)
+<li><a href="EternityComics35.jpg">Dracula: The Lady In The Tomb</a> (1991)
+<li><a href="EternityComics36.jpg">Edgar Allan Poe: The Black Cat And Other Stories</a> (1989)
+<li><a href="EternityComics37.jpg">Edgar Allan Poe: The Masque Of Red Death And Other Stories</a> (1989)
+<li><a href="EternityComics38.jpg">Edgar Allan Poe: The Murders In The Rue Morgue And Other Stories</a> (1989)
+<li><a href="EternityComics39.jpg">Edgar Allan Poe: The Pit And The Pendulum</a> (1989)
+<li><a href="EternityComics40.jpg">Edgar Allan Poe: The Tell-Tale Heart And Other Stories</a> (1989)
+<li><a href="EternityComics41.jpg">Eliminator</a> (1992)
+<li><a href="EternityComics42.jpg">Eliminator Full Color Special</a> (1991)
+<li><a href="EternityComics43.jpg">Emeraldas</a> (1990)
+<li><a href="EternityComics44.jpg">Empire</a> (1992)
+<li><a href="EternityComics45.jpg">Eternity Triple Action</a> (1993)
+<li><a href="EternityComics62.jpg">Earthlore</a> (1986)
+<li><a href="EternityComics46.jpg">Evil Ernie</a> (1991)
+<li><a href="EternityComics47.jpg">Ex-Mutants</a> (1987)
+<li><a href="EternityComics48.jpg">Fifties Terror</a> (1988)
+<li><a href="EternityComics49.jpg">Fist Of God</a> (1988)
+<li><a href="EternityComics50.jpg">Fright (1988)
+<li><a href="EternityComics65.jpg">Futurians</a> (1987)
+<li><a href="EternityComics51.jpg">G.I. Mutants</a> (1987)
+<li><a href="EternityComics52.jpg">Gambit</a> (1988)
+<li><a href="EternityComics53.jpg">Ghosts Of Dracula</a> (1991)
+<li><a href="EternityComics54.jpg">Ghouls</a> (1989)
+<li><a href="EternityComics55.jpg">Ground Zero</a> (1991)
+<li><a href="EternityComics66.jpg">Gonad the Barbarian</a> (1986)
+<li><a href="EternityComics56.jpg">Halloween Terror</a> (1990)
+<li><a href="EternityComics57.jpg">Hamster Vice</a> (1989)
+<li><a href="EternityComics58.jpg">Harte Of Darkness</a> (1991)
+<li><a href="EternityComics59.jpg">Headless Horseman</a> (1989)
+<li><a href="EternityComics61.jpg">Howl</a> (1988)
+<li><a href="EternityComics67.jpg">I Love Lucy</a> (1990)
+<li><a href="EternityComics68.jpg">Invisoworld</a> (1987)
+<li><a href="EternityComics69.jpg">Invaders From Mars</a> (1990)
+<li><a href="EternityComics70.jpg">Jack The Ripper</a> (1989)
+<li><a href="EternityComics71.jpg">Jackaroo</a> (1990)
+<li><a href="EternityComics72.jpg">Johnny Atomic</a> (1991)
+<li><a href="EternityComics73.jpg">Kid Cannibal</a> (1991)
+<li><a href="EternityComics74.jpg">Killing Stroke</a> (1991)
+<li><a href="EternityComics75.jpg">Lensman</a> (1990)
+<li><a href="EternityComics76.jpg">Lester Girls</a> (1990)
+<li><a href="EternityComics77.jpg">Libby Ellis</a> (1988)
+<li><a href="EternityComics78.jpg">Liberator</a> (1987)
+<li><a href="EternityComics79.jpg">Libra</a> (1987)
+<li><a href="EternityComics80.jpg">Lunatic Binge</a> (1987)
+<li><a href="EternityComics81.jpg">Mantus Files</a> (1991)
+<li><a href="EternityComics82.jpg">Metal Bikini</a> (1990)
+<li><a href="EternityComics83.jpg">Mighty Mites</a> (1986)
+<li><a href="EternityComics84.jpg">Monster Frat House</a> (1989)
 <li>Ninja (1986)
 <li>Ninja Funnies by Dale Berry
 <li>Original Tom Corbett, Space Cadet (1990)
-<li>The Phantom of the Opera (1988)
+<li>Phantom of the Opera (1988)
 <li>Pirate Corp$ / Hectic Planet by Evan Dorkin (1987)
 <li>Plan 9 from Outer Space: Thirty Years Later!
-<li>The Puppet Master
+<li>Puppet Master
 <li>Reign of the Dragonlord
 <li>Robotech, by Jason and John Waltrip (1988)
 <li>Scarlet in Gaslight written by Martin Powell (1987)
@@ -65,13 +130,13 @@ Titles
 <li>Shuriken by Reggie Byers
 <li>Southern Squadron
 <li><a href="../SpicyTales/SpicyTales.html">Spicy Tales</a> (1988)
-<li>The Three Stooges: The Knuckleheads Return (1989)
+<li>Three Stooges: The Knuckleheads Return (1989)
 <li>Tiger-X by Ben Dunn
 <li>Triple Action anthology comic
 <li>The Trouble with Girls (1987)
 <li>Twilight Avenger by John Wooly and Terry Tidwell
-<li>The Verdict by Martin Powell and Dean Haspiel
-<li>The Uncensored Mouse (1989)
+<li>Verdict by Martin Powell and Dean Haspiel
+<li>Uncensored Mouse (1989)
 <li>War of the Worlds
 <li>White Devil (1990)
 <li>Yakuza (1987)
