--- a/ChaosComics/ChaosComics.html
+++ b/ChaosComics/ChaosComics.html
@@ -108,7 +108,7 @@ Titles
 <li><a href="ChaosComics33.jpg">Static-X</a>    (2002)
 <li><a href="ChaosComics34.jpg">Stone Cold Steve Austin</a>     (1999)
 <li><a href="ChaosComics35.jpg">Suspira: The Great Working</a>      (1997)
-<li><a href="ChaosComics36.jpg">The Undead</a>      (2002)
+<li><a href="ChaosComics36.jpg">Undead</a>      (2002)
 <li><a href="ChaosComics37.jpg">Undertaker</a>      (1999)
 <li><a href="ChaosComics38.jpg">Untold Tales of Chastity</a>    (2000)
 <li><a href="ChaosComics39.jpg">Vandala</a>     (2000)
