--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
 
 <tr>
 <td>4 Kids Walk Into A Bank</td>
-<td>2017</td><td>Black Mask Studios</td>
+<td>2017</td>
+<td>Black Mask</td>
 <td><a href="4KidsWalkIntoABank/4KidsWalkIntoABank.html">Details</a></td>
 </tr>
 
@@ -390,6 +391,13 @@
 <td>2009</td>
 <td>Publisher</td>
 <td><a href="12GaugeComics/12GaugeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>12 Reasons To Die</td>
+<td>2013</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7676,6 +7684,13 @@
 </tr>
 
 <tr>
+<td>Ballistic</td>
+<td>2013</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ballistic Action</td>
 <td>1996</td>
 <td>Image</td>
@@ -8324,6 +8339,13 @@
 <td>1995</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Beautiful Canvas</td>
+<td>2017</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9538,7 +9560,7 @@
 <tr>
 <td>Black</td>
 <td>2017</td>
-<td>Black Mask Studios</td>
+<td>Black Mask</td>
 <td><a href="Black/Black.html">Details</a></td>
 </tr>
 
@@ -11441,6 +11463,13 @@
 </tr>
 
 <tr>
+<td>Breathless</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Breathtaker</td>
 <td>1990</td>
 <td>Vertigo</td>
@@ -12460,6 +12489,13 @@
 <td>2002</td>
 <td>Vertigo</td>
 <td><a href="Cairo/Cairo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Calexit</td>
+<td>2017</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14778,6 +14814,13 @@
 </tr>
 
 <tr>
+<td>Clandestino</td>
+<td>2015</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Clankillers</td>
 <td>2018</td>
 <td>Aftershock</td>
@@ -15453,6 +15496,13 @@
 <td>1951</td>
 <td>Atlas</td>
 <td><a href="CombatKelly/CombatKelly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Come Into Me</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16734,6 +16784,13 @@
 <td>1992</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Critical Hit</td>
+<td>2014</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19552,6 +19609,13 @@
 </tr>
 
 <tr>
+<td>Devil Within</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Devil-Dog Dugan</td>
 <td>1956</td>
 <td>Atlas</td>
@@ -19906,6 +19970,13 @@
 <td>1991</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Disciples</td>
+<td>2015</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21320,6 +21391,13 @@
 <td>2010</td>
 <td>Ape</td>
 <td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dregs</td>
+<td>2017</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22762,6 +22840,13 @@
 <td>2014</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eternal</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25368,6 +25453,13 @@
 </tr>
 
 <tr>
+<td>Forevers</td>
+<td>2016</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Forge</td>
 <td>2002</td>
 <td>CrossGen</td>
@@ -27685,6 +27777,13 @@
 </tr>
 
 <tr>
+<td>Godkiller</td>
+<td>2014</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Godland</td>
 <td>2005</td>
 <td>Image</td>
@@ -28039,6 +28138,13 @@
 <td>2007</td>
 <td>Avatar</td>
 <td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gravetrancers</td>
+<td>2017</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32563,6 +32669,13 @@
 </tr>
 
 <tr>
+<td>Jade Street Protection Services</td>
+<td>2016</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jade Warriors</td>
 <td>1999</td>
 <td>Image</td>
@@ -34782,6 +34895,13 @@
 </tr>
 
 <tr>
+<td>Kim &amp; Kim</td>
+<td>2016</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kim Possible</td>
 <td>2019</td>
 <td>IDW</td>
@@ -35601,6 +35721,13 @@
 </tr>
 
 <tr>
+<td>Lab Raider</td>
+<td>2019</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Labor Force</td>
 <td>1986</td>
 <td>Blackthorne</td>
@@ -35937,6 +36064,13 @@
 </tr>
 
 <tr>
+<td>Last Born</td>
+<td>2014</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Last Broadcast</td>
 <td>2014</td>
 <td>Boom!</td>
@@ -36060,6 +36194,13 @@
 <td>2001</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Last Song</td>
+<td>2017</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36515,6 +36656,13 @@
 <td>1947</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Liberator</td>
+<td>2014</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37481,6 +37629,13 @@
 <td>1914</td>
 <td>Creator</td>
 <td><a href="LouFine/LouFine.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Loud</td>
+<td>2015</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39575,6 +39730,13 @@
 <td>1950</td>
 <td>Farrell</td>
 <td><a href="Farrell/Farrell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mayday</td>
+<td>2015</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43539,6 +43701,13 @@
 </tr>
 
 <tr>
+<td>No Angel</td>
+<td>2016</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>No Ducks!</td>
 <td>1977</td>
 <td>Last Gasp</td>
@@ -43578,6 +43747,13 @@
 <td>2009</td>
 <td>Vertigo</td>
 <td><a href="Nobody/Nobody.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nobody Is In Control</td>
+<td>2019</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43928,6 +44104,13 @@
 <td>2010</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Occupy Comics</td>
+<td>2013</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45778,6 +45961,13 @@
 </tr>
 
 <tr>
+<td>Pirouette</td>
+<td>2014</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pistolfist: Original Script</td>
 <td>2006</td>
 <td>Alias</td>
@@ -47172,6 +47362,13 @@
 <td>1991</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Quantum Teens Are Go</td>
+<td>2017</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51062,6 +51259,13 @@
 </tr>
 
 <tr>
+<td>Sex Death Revolution</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sgt. Barney Barker</td>
 <td>1956</td>
 <td>Atlas</td>
@@ -52055,6 +52259,13 @@
 </tr>
 
 <tr>
+<td>Skeptics</td>
+<td>2016</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skin &amp; Earth</td>
 <td>2017</td>
 <td>Dynamite</td>
@@ -52496,6 +52707,13 @@
 </tr>
 
 <tr>
+<td>Snap Flash Hustle</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Snarf</td>
 <td>1972</td>
 <td>Kitchen Sink</td>
@@ -52864,6 +53082,13 @@
 <td>1953</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space Riders</td>
+<td>2015</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -55114,6 +55339,13 @@
 </tr>
 
 <tr>
+<td>Survival Fetish</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Surviving Saskatoon</td>
 <td>2000</td>
 <td>Marvel</td>
@@ -56192,6 +56424,13 @@
 </tr>
 
 <tr>
+<td>There's Nothing There</td>
+<td>2017</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>They Live</td>
 <td>1988</td>
 <td>Universal</td>
@@ -56703,6 +56942,13 @@
 </tr>
 
 <tr>
+<td>Toe Tag Riot</td>
+<td>2016</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Toil And Trouble</td>
 <td>2015</td>
 <td>Boom!</td>
@@ -57085,6 +57331,13 @@
 <td>2015</td>
 <td>Action Lab</td>
 <td><a href="ActionLab/ActionLab.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tranference</td>
+<td>2015</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60147,10 +60400,24 @@
 </tr>
 
 <tr>
+<td>We Are Danger</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>We Are On Our Own</td>
 <td>2006</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>We Can Never Go Home</td>
+<td>2015</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60991,6 +61258,13 @@
 <td>2003</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wilds</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
@@ -61869,6 +62143,13 @@
 </tr>
 
 <tr>
+<td>X'ed</td>
+<td>2015</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Xanadu Color Special</td>
 <td>1988</td>
 <td>Eclipse</td>
@@ -62230,6 +62511,13 @@
 <td>1982</td>
 <td>BBC</td>
 <td><a href="YoungOnes/YoungOnes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Young Terrorists</td>
+<td>2018</td>
+<td>Black Mask</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
 </tr>
 
 <tr>
