--- a/BlackMask/BlackMask.html
+++ b/BlackMask/BlackMask.html
@@ -18,63 +18,101 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="../4KidsWalkIntoABank/4KidsWalkIntoABank01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlackMask1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlackMask2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Black/Black.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackMask41.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Black Mask Studios is a comic book and graphic novel publishing company formed by Matt Pizzolo, Steve Niles and Brett Gurewitz, designed as a new infrastructure to support comic book creators and a new pipeline for transgressive art. On March 20, 2012, it was announced that Occupy Comics, the charity comic book inspired by and raising funds for Occupy Wall Street, organized by Pizzolo, would not be released through an existing comic book publisher, but through a new company called Black Mask Studios.
+<a href="https://blackmaskstudios.com/">Black Mask Studios</a> is a comic book and graphic novel publishing company formed by Matt Pizzolo, Steve Niles and Brett Gurewitz, designed as a new infrastructure to support comic book creators and a new pipeline for transgressive art. On March 20, 2012, it was announced that Occupy Comics, the charity comic book inspired by and raising funds for Occupy Wall Street, organized by Pizzolo, would not be released through an existing comic book publisher, but through a new company called Black Mask Studios.
 </p><p>
 Niles and Gurewitz joined with Pizzolo to found Black Mask, Niles noting "if V for Vendetta were created today there would be no publisher for it." Pizzolo has explained that Black Mask will operate under the mottos "to create you must destroy" and "Inspire, never meddle". On June 12, 2012, Black Mask Studios opened its webstore and officially released Occupy Comics #1 with the announcement that Pulitzer Prize-winner Art Spiegelman, Bill Ayers, Ryan Alexander-Tanner, Jimmy Palmiotti, and Matt Bors had joined the book's roster.
 </p><p>
-<li><a href="../4KidsWalkIntoABank/4KidsWalkIntoABank.html">4 Kids Walk Into A Bank</a> 2017
-<li>12 Reasons To Die created by Wu-Tang Clan's Ghostface Killah
-<li>Ballistic
-<li>Beautiful Canvas 2017
-<li><a href="../Black/Black.html">Black</a>	2017
-<li>Calexit 2017
-<li>Clandestino 2015
-<li>Come Into Me 2018
-<li>Critical Hit 2014
-<li>Devil Within 2018
-<li>Disciples 2015
-<li>Dregs 2017
-<li>Eternal 2018
-<li>Forevers 2016
-<li>Godkiller  2014
-<li>Gravetrancers
-<li>Jade Street Protection Services 2016
-<li>Kim &amp; Kim  2016
-<li>Lab Raider 2019
-<li>Last Born 2014
-<li>Last Song 2017
-<li>Liberator 2014
-<li>Mayday  2015
-<li>No Angel  2016
-<li>Nobody Is In Control 2019
-<li>Occupy Comics 2013
-<li>Our Work Fills The Pews
-<li>Pirouette 2014
-<li>Quantum Teens Are Go 2017
-<li>Run For The Shadows 
-<li>Sex Death Revolution 2018
-<li>Sinatoro written by Grant Morrison
-<li>Skeptics
-<li>Snap Flash Hustle
-<li>Space Riders
-<li>Space Riders Galaxy of Brutality
-<li>Survival Fetish
-<li>There's Nothing There
-<li>Tomorrow's Ashes
-<li>Toe Tag Riot
-<li>Transference 
-<li>We Are Danger
-<li>We Can Never Go Home
-<li>Wilds
-<li>X'ed 
-<li>Young Terrorists 
+<li><a href="../4KidsWalkIntoABank/4KidsWalkIntoABank.html">4 Kids Walk Into A Bank</a> (2017)
+<li><a href="BlackMask1.jpg">12 Reasons To Die</a> (2013)
+<li><a href="BlackMask2.jpg">Ballistic</a> (2013)
+<li><a href="BlackMask3.jpg">Beautiful Canvas</a> (2017)
+<li><a href="../Black/Black.html">Black</a>	(2017)
+<li><a href="BlackMask4.jpg">Breathless</a> (2018)
+<li><a href="BlackMask5.jpg">Calexit</a> (2017)
+<li><a href="BlackMask6.jpg">Clandestino</a> (2015)
+<li><a href="BlackMask7.jpg">Come Into Me</a> (2018)
+<li><a href="BlackMask8.jpg">Critical Hit</a> (2014)
+<li><a href="BlackMask9.jpg">Devil Within</a> (2018)
+<li><a href="BlackMask10.jpg">Disciples</a> (2015)
+<li><a href="BlackMask11.jpg">Dregs</a> (2017)
+<li><a href="BlackMask12.jpg">Eternal</a> (2018)
+<li><a href="BlackMask13.jpg">Forevers</a> (2016)
+<li><a href="BlackMask14.jpg">Godkiller</a> (2014)
+<li><a href="BlackMask15.jpg">Gravetrancers</a> (2017)
+<li><a href="BlackMask16.jpg">Jade Street Protection Services</a> (2016)
+<li><a href="BlackMask17.jpg">Kim &amp; Kim </a> (2016)
+<li><a href="BlackMask18.jpg">Lab Raider</a> (2019)
+<li><a href="BlackMask19.jpg">Last Born</a> ( 2014)
+<li><a href="BlackMask20.jpg">Last Song</a> ( 2017)
+<li><a href="BlackMask21.jpg">Liberator</a> ( 2014)
+<li><a href="BlackMask22.jpg">Loud</a> (2019)
+<li><a href="BlackMask23.jpg">Mayday</a> (2015)
+<li><a href="BlackMask24.jpg">No Angel</a> (2016)
+<li><a href="BlackMask25.jpg">Nobody Is In Control</a> (2019)
+<li><a href="BlackMask26.jpg">Occupy Comics</a> (2013)
+<li><a href="BlackMask27.jpg">Pirouette</a> (2014)
+<li><a href="BlackMask28.jpg">Quantum Teens Are Go</a> (2017)
+<li><a href="BlackMask29.jpg">Sex Death Revolution</a> (2018)
+<li><a href="BlackMask33.jpg">Skeptics</a> (2016)
+<li><a href="BlackMask30.jpg">Snap Flash Hustle</a> (2018)
+<li><a href="BlackMask31.jpg">Space Riders</a> (2015)
+<li><a href="BlackMask32.jpg">Survival Fetish</a> (2018)
+<li><a href="BlackMask35.jpg">There's Nothing There</a> (2017)
+<li><a href="BlackMask36.jpg">Toe Tag Riot</a> (2016)
+<li><a href="BlackMask37.jpg">Transference</a> (2015)
+<li><a href="BlackMask38.jpg">We Are Danger</a> (2018)
+<li><a href="BlackMask39.jpg">We Can Never Go Home</a> (2015)
+<li><a href="BlackMask34.jpg">Wilds</a> (2018)
+<li><a href="BlackMask40.jpg">X'ed</a>  (2015)
+<li><a href="BlackMask41.jpg">Young Terrorists (2018) 
 
 </body>
 </html>
